--- a/10_3_About_Patterns_and_Probabilities.ipynb
+++ b/10_3_About_Patterns_and_Probabilities.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "10_3_About_Patterns_and_Probabilities.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNRN6ikcgI798GoO+Ivy3H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/10_3_About_Patterns_and_Probabilities.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/10_3_About_Patterns_and_Probabilities.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,6 +32,25 @@
         "# About Patterns and Probabilities\n",
         "## Class Directed Learning\n",
         "### Due: Tuesday, 9 March 2021, 11:59 pm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zIuhsIM5PX2q"
+      },
+      "source": [
+        "*Done by Brayden Whitlock*\n",
+        "with help from Davis Kerr, Matt Reed and Paul Semedeni"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rtnyNh4OPdpc"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -148,6 +166,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7oOLV7MiJISK",
+        "outputId": "15c233f5-5611-48b7-984c-fc1d4ce6eaac"
+      },
+      "source": [
+        "def NST(n):\n",
+        "  if n <= 1: return n\n",
+        "  return 4 * NST(n-1) - NST(n-2)\n",
+        "\n",
+        "\n",
+        "NSF(5)\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "209"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "88QstqiKKGEb",
+        "outputId": "580911f9-49c8-4899-eb66-f3ee7b0a8214"
+      },
+      "source": [
+        "def NSTIBR(n):\n",
+        "  if n <= 1: return 1\n",
+        "  return 4 * NSTIBR(n-1) - NSTIBR(n-2)\n",
+        "\n",
+        "\n",
+        "NSTIBR(4)\n"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "41"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "n1o1Dnn5slb9"
@@ -165,6 +249,64 @@
         "Can you find closed-form formulas for $f(n)$ and $g(n)$?\n",
         "\n",
         "A closed-form formula expressing these functions in terms of operations on $n$, **without** referring to previous calculated values of the functions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lnV-TiEMOI4C"
+      },
+      "source": [
+        "XA(n) = (1/(2√3))(2 + √3)^n − (1/(2√3))(2 −√3)^n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "obDL441_NuNw"
+      },
+      "source": [
+        "def nst_closed(n):\n",
+        "  return (((2 + (3 ** 0.5)) ** n) + ((2 - (3 ** 0.5)) ** n)) / (2 * (3 ** 0.5))\n",
+        "\n",
+        "def nstibr_closed(n):\n",
+        "  return nst_closed(n) - nst_closed(n - 1)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CX2ueFdeNv76",
+        "outputId": "f4bf0bcf-e27f-4102-ca87-d16d7ec81584",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "p_nstibr = lambda n: nstibr_closed(n) / nst_closed(n)\n",
+        "for i in range(490, 500):\n",
+        "  print(f'n={i}, p(n)={p_nstibr(i)}')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "n=490, p(n)=0.7320508075688772\n",
+            "n=491, p(n)=0.7320508075688773\n",
+            "n=492, p(n)=0.7320508075688774\n",
+            "n=493, p(n)=0.7320508075688772\n",
+            "n=494, p(n)=0.7320508075688773\n",
+            "n=495, p(n)=0.7320508075688774\n",
+            "n=496, p(n)=0.7320508075688773\n",
+            "n=497, p(n)=0.7320508075688773\n",
+            "n=498, p(n)=0.7320508075688773\n",
+            "n=499, p(n)=0.7320508075688773\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -246,7 +388,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YYH6Mf1ztnfu"
+        "id": "YYH6Mf1ztnfu",
+        "outputId": "07a6817c-03fd-4f58-b45f-a820f69c9762",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from math import sqrt\n",
@@ -257,21 +403,56 @@
         "print(value, value_as_cf, cf_to_value)\n",
         "print(eval_frac(cf_to_value))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.7320508075688772 [0, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2] 302632/413403\n",
+            "0.732050807565499\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yviS2YG_t2rx"
+        "id": "yviS2YG_t2rx",
+        "outputId": "1af0c086-275e-4c9f-9c48-010d24743f5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from pprint import pprint\n",
         "\n",
         "pprint(list(map(lambda n: contfrac2frac(value_as_cf[:n]), range(20, 5, -1))))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[Fraction(110771, 151316),\n",
+            " Fraction(81090, 110771),\n",
+            " Fraction(29681, 40545),\n",
+            " Fraction(21728, 29681),\n",
+            " Fraction(7953, 10864),\n",
+            " Fraction(5822, 7953),\n",
+            " Fraction(2131, 2911),\n",
+            " Fraction(1560, 2131),\n",
+            " Fraction(571, 780),\n",
+            " Fraction(418, 571),\n",
+            " Fraction(153, 209),\n",
+            " Fraction(112, 153),\n",
+            " Fraction(41, 56),\n",
+            " Fraction(30, 41),\n",
+            " Fraction(11, 15)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
