--- a/10_4_Expound_On_Topics.ipynb
+++ b/10_4_Expound_On_Topics.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "10_4_Expound_On_Topics.ipynb",
+      "name": "Copy of 10_4_Expound_On_Topics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOocSvOnYcl27xy1u47ZC1N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/10_4_Expound_On_Topics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/10_4_Expound_On_Topics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,6 +32,15 @@
         "# Expound on Topics\n",
         "## More About Patterns and Probabilities\n",
         "### Wednesday, 10 March 2021"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nevkmeOBvOYU"
+      },
+      "source": [
+        "Brayden Whitlock in colaboration with Paul and Davis "
       ]
     },
     {
@@ -258,6 +266,89 @@
         "What are $y$, $r$, $z$ and $s$ for each?\n",
         "\n",
         "When you think you have found their closed-form formulas make sure to double-check that they yield the same numbers as the original recurrence relations."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l30QpMEiMIc-"
+      },
+      "source": [
+        "Let g(n) = NST(n)\r\n",
+        "\r\n",
+        "$g(n) = 4g(n-1) - g(n-2)$ for $n > 1$;\r\n",
+        "\r\n",
+        "$g(0) = 0$,\r\n",
+        "\r\n",
+        "$g(1) = 1$."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ikGo8USYOnTU"
+      },
+      "source": [
+        "Let $f(n) =$ NSTIBR$(n)$:\r\n",
+        "\r\n",
+        "$f(n) = 4f(n-1) - f(n-2)$ for $n > 1$;\r\n",
+        "\r\n",
+        "$f(0) = 1$,\r\n",
+        "\r\n",
+        "$f(1) = 1$."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hKiXwOI-Mlcf"
+      },
+      "source": [
+        "$y\\cdot r^n + z \\cdot s^n$\r\n",
+        "\r\n",
+        "where $y$, $z$, $r$, and $s$ are real numbers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PfgJsXGWNGB1"
+      },
+      "source": [
+        "Assume, for simplicity, that $y = 1$ and $z = 0$.\r\n",
+        "\r\n",
+        "(We'll come back and revise that assumption later.)\r\n",
+        "\r\n",
+        "So $g(n) = r^n$ for some real number $r$. Which one? Let's find out!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ft0ZcVjINabh"
+      },
+      "source": [
+        "For g(n):<br>\r\n",
+        "$y = \\frac{1}{2 \\sqrt{3}} $\r\n",
+        "\r\n",
+        "$z = \\frac{-1}{2 \\sqrt{3}} $\r\n",
+        "\r\n",
+        "$r = 2 + \\sqrt{3} $\r\n",
+        "\r\n",
+        "$s = 2 - \\sqrt{3} $\r\n",
+        "\r\n",
+        "$g(n) = \\frac{(2+\\sqrt{3})^{n} - (2-\\sqrt{3})^{n}}{2\\sqrt{3}}$\r\n",
+        "\r\n",
+        "For f(n): <br>\r\n",
+        "$r = 2 + \\sqrt{3} $\r\n",
+        "\r\n",
+        "$s = 2 - \\sqrt{3} $\r\n",
+        "\r\n",
+        "$y = \\frac{1}{2 \\sqrt{3}} $\r\n",
+        "\r\n",
+        "$z = 1 - \\frac{1}{2 \\sqrt{3}} $\r\n",
+        "\r\n",
+        "$f(n) = \\frac{(2+\\sqrt{3})^{n} + (2 \\sqrt{3} - 1)(2-\\sqrt{3})^{n}}{2\\sqrt{3}}$"
       ]
     }
   ]
