--- a/11_3_About_The_Petersen_Graph.ipynb
+++ b/11_3_About_The_Petersen_Graph.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "11_3_About_The_Petersen_Graph.ipynb",
+      "name": "Copy of 11_3_About_The_Petersen_Graph.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAmHlPgKOYTC4XMSkz3cCR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/11_3_About_The_Petersen_Graph.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/11_3_About_The_Petersen_Graph.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,6 +54,17 @@
         "Draw each step of this construction using any graph-drawing tools in your toolbox.\n",
         "\n",
         "Teach one another how to use the tools you each have."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JaxlvGfeCU-B"
+      },
+      "source": [
+        "I set up my graph on lucid chart. Here is the link. \n",
+        "\n",
+        "https://lucid.app/lucidchart/invitations/accept/d1f680e5-e1ff-4197-b471-aea75e335f8d?viewport_loc=64.64864864864866%2C-75.17117117117095%2C2218.666666666667%2C1218.0180180180182%2C0_0"
       ]
     }
   ]
