--- a/11_4_Euler_and_Hamilton_Circuits_and_Paths.ipynb
+++ b/11_4_Euler_and_Hamilton_Circuits_and_Paths.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "11_4_Euler_and_Hamilton_Circuits_and_Paths.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlETtTTaEVoWYFRQVz1hK4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/11_4_Euler_and_Hamilton_Circuits_and_Paths.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/11_4_Euler_and_Hamilton_Circuits_and_Paths.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -168,7 +167,7 @@
         "\n",
         "$\\square$ an Euler Circuit?\n",
         "\n",
-        "$\\square$ a Hamilton Path?\n",
+        "$\\boxtimes$ a Hamilton Path?\n",
         "\n",
         "$\\square$ a Hamilton Circuit?\n"
       ]
@@ -194,9 +193,9 @@
         "\n",
         "$\\square$ an Euler Circuit?\n",
         "\n",
-        "$\\square$ a Hamilton Path?\n",
+        "$\\boxtimes$ a Hamilton Path?\n",
         "\n",
-        "$\\square$ a Hamilton Circuit?\n"
+        "$\\boxtimes$ a Hamilton Circuit?\n"
       ]
     },
     {
