--- a/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb
+++ b/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTjhD9eeepKOr3YCiGUWxR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -139,7 +138,7 @@
       "source": [
         "!echo -n 'main(){char *c=\"main(){char *c=%c%s%c;printf(c,34,c,34);}\";printf(c,34,c,34);}' > quine.c; cc -w quine.c; ./a.out | diff - quine.c"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +221,7 @@
       "source": [
         "!javac Dupe.java"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +232,7 @@
       "source": [
         "!rm -rf dupedupe && mkdir dupedupe"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -248,7 +247,7 @@
       "source": [
         "!cd dupedupe; java -cp .. Dupe"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +266,7 @@
       "source": [
         "!diff Dupe.java dupedupe/Dupe.java"
       ],
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,6 +341,15 @@
         "Look up and read the Edgar Allan Poe \"prose poem\" *The Power of Words*, and discuss it with your partner. You might even take turns reading out loud, one of you taking the role of Oinos and the other of Agathos.\n",
         "\n",
         "Be prepared to have to look up some words!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oTJZkCa66X76"
+      },
+      "source": [
+        "we read it and looked up words as well "
       ]
     }
   ]
