--- a/14_1_My_Final_Grade_Claim_for_W21.ipynb
+++ b/14_1_My_Final_Grade_Claim_for_W21.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "4_1_My_Final_Grade_Claim_for_W21.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPk2FkKX3ex0UkYXw9WiIsF",
+      "authorship_tag": "ABX9TyOJL++d/srhUWFlSvTDpIrZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,9 @@
         "\n",
         "2.https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/11_2_Ponder_and_Prove_Verifying_Graph_Properties.ipynb\n",
         "\n",
-        "3.https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/10_2_Ponder_and_Prove_Spanning_Trees.ipynb\n"
+        "3.https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/10_2_Ponder_and_Prove_Spanning_Trees.ipynb\n",
+        "\n",
+        "4. Above and beyond. In 9.1 we found that 5,881 has the highest compression ratio for primes less than 10,000. https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/09_1_About_Huffman_Trees_and_Codes.ipynb\n"
       ]
     },
     {
